--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "bootstrap": "^5.2.2",
     "dotenv": "^16.0.3",
     "gatsby": "^4.24.4",
     "gatsby-plugin-image": "^2.24.0",
@@ -23,6 +24,7 @@
     "gatsby-source-filesystem": "^4.24.0",
     "gatsby-transformer-sharp": "^4.24.0",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.1.0",
     "sass": "^1.55.0"
   }
